2011-08-11  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/tactical.php: Fixed and improved wrong and ugly
	links from tactical view

2011-08-10  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_networkmap.php: fixed execution the generation when
	it is empty.

2011-08-10  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb.sql, pandoradb.postgreSQL.sql, pandoradb.oracle.sql: Added
	  a new column to store extended module information.

	* operation/agentes/status_monitor.php,
	  operation/agentes/estado_monitores.php: Added help tips to display
	  extended module information.

	* extras/pandoradb_migrate_v3.2_to_v4.0.sql,
	  godmode/agentes/agent_manager.php,
	  include/styles/tip.css,
	  include/functions_ui.php: Added support for help tips with custom
	  images.

2011-08-10  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: New sensor as agent type. Updated version.

	* include/graphs/functions_gd.php: Progressbar has a fixed font size.

	* include/functions_config.php: By default now gets a fontsize 
	called "Smallfont"; ideal to be used with our graphs instead the
	other. Size is also smaller as default.

	* godmode/servers/manage_recontask.php: Fixed broken code (matching
	for NULL, now works).

	* godmode/servers/manage_recontask_form.php: Altered some default values
	to be better.

2011-08-10 Javier Lanz <javier.lanz@artica.es>

	* operation/agentes/exportdata.php: Fixed an ugly spelling mistake

2011-08-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_config.php: Fixed premature warning message about db
	maintenance over a new installation.

	Fixes: #3371197

2011-08-10  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_networkmap.php: fixed execution the generation when
	it is empty.

2011-08-10  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_menu.php, operation/menu.php, godmode/menu.php: fixed
	when set a icon in a enterprise extension for the entry in menu. And added