@@ -1,3 +1,7 @@
+2011-08-11 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* godmode/modules/manage_nc_groups.php: Fixed some problems with pagination 
+	
 2011-08-11  Sergio Martin <sergio.martin@artica.es>
 
 	* operation/agentes/tactical.php: Fixed and improved wrong and ugly
